footer PCレイアウト作成

--- a/index.html
+++ b/index.html
@@ -595,7 +595,67 @@
         </section>
       </main>
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="l-S01">
+          <div class="l-S02">
+            <div class="l-S03">
+              <div class="l-L01">
+                <div class="l-L02"><img src="img/footer_cranks_01.svg" alt="" /></div>
+                <div class="l-L03">
+                  <dl class="b-footerCompany">
+                    <dt class="b-footerCompany__label">会社名</dt>
+                    <dd class="b-footerCompany__text">
+                      株式会社CRANKS <br /><span class="b-footerCompany__subText">CRANKS CORPORATION</span>
+                    </dd>
+                    <dt class="b-footerCompany__label">設立</dt>
+                    <dd class="b-footerCompany__text">2021年2月</dd>
+                    <dt class="b-footerCompany__label">事業内容</dt>
+                    <dd class="b-footerCompany__text">Web制作事業<br />Webクリエイター育成事業</dd>
+                    <dt class="b-footerCompany__label">住所</dt>
+                    <dd class="b-footerCompany__text">
+                      <span class="b-footerCompany__subText">〒150-0001</span>
+                      <br />
+                      東京都渋谷区神宮前6-23-4 桑野ビル2F
+                    </dd>
+                    <dt class="b-footerCompany__label">代表者</dt>
+                    <dd class="b-footerCompany__text">
+                      <span class="b-footerCompany__subText">代表取締役 社長</span>
+                      <br />
+                      芦沢 哲也 <br />
+                      <span class="b-footerCompany__subText">代表取締役 副社長</span>
+                      <br />
+                      荻野 裕行
+                    </dd>
+                    <dt class="b-footerCompany__label">ホームページ</dt>
+                    <dd class="b-footerCompany__text"><a href="https://cranks.co.jp/">https://cranks.co.jp/</a></dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+            <div class="l-L04">
+              <div class="l-L05">
+                <h1 class="b-logo">
+                  <a href="index.html">SLashNext</a>
+                </h1>
+              </div>
+              <nav class="l-L06">
+                <ul class="m-headerNav__box">
+                  <li class="b-nav__item b-nav__title"><a href="">SLashNextとは</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="">サービスの特徴</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="">価格の違い</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="">低価格のワケ</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="">納品までの流れ</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="">所属クリエイター</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="">よくある質問</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="l-L07">
+              <p class="b-copyRight">&copy;2022 CRANKS CORPORATION</p>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
