--- a/parts.html
+++ b/parts.html
@@ -237,7 +237,13 @@
       私たちがWeb制作を通して目指す先は「まだない価値を生み出せるカンパニー」です。そのために必要なものはいくつかありますが、最も大切なものは共に夢を目指せる仲間だと考えています。そして、仲間に対して一番求めているのは人間性。案件を通して技術に磨きをかけるだけではなく、仲間と共に案件を乗り越えて人間性を高めていってほしい。このような想いで、高品質で低価格なWeb制作プロジェクトを立ち上げました。
     </p>
     <p class="b-messageContents__deco">SLashNext</p>
-    <!-- Text common --------------------------------------------------------------------------->
+    <!-- Text footer --------------------------------------------------------------------------->
+    <dt class="b-footerCompany__label">会社名</dt>
+    <dd class="b-footerCompany__text">
+      株式会社CRANKS <br /><span class="b-footerCompany__subText">CRANKS CORPORATION</span>
+    </dd>
+    <p class="b-copyRight">&copy;2022 CRANKS CORPORATION</p>
+    <p class=""></p>
     <!-- Text common --------------------------------------------------------------------------->
     <!-- Text common --------------------------------------------------------------------------->
   </body>
