--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                 </h1>
               </div>
               <nav class="l-L06">
-                <ul class="m-headerNav__box">
+                <ul class="m-footerNav__box">
                   <li class="b-nav__item b-nav__title"><a href="">SLashNextとは</a></li>
                   <li class="b-nav__item b-nav__title"><a href="">サービスの特徴</a></li>
                   <li class="b-nav__item b-nav__title"><a href="">価格の違い</a></li>
