--- a/parts.html
+++ b/parts.html
@@ -22,36 +22,38 @@
     <!-- flame common --------------------------------------------------------------------------->
     <header class="header">
       <div class="l-S01">
-        <div class="l-L01">
-          <h1 class="b-logo">
-            <a href="index.html">SLashNext</a>
-          </h1>
-        </div>
-        <nav class="l-L02">
-          <button
-            type="button"
-            class="js-button-hamburger button-hamburger"
-            aria-controls="global-nav"
-            aria-expanded="false"
-          >
-            <div class="hamburger-text">
-              <span class="hamburger">
-                <span class="screen-reader-text">メニューを開閉する</span>
-              </span>
-            </div>
-          </button>
-          <div id="global-nav" class="l-global-nav">
-            <ul class="m-headerNav__box">
-              <li class="b-nav__item b-nav__title"><a href="">SLashNextとは</a></li>
-              <li class="b-nav__item b-nav__title"><a href="">サービスの特徴</a></li>
-              <li class="b-nav__item b-nav__title"><a href="">価格の違い</a></li>
-              <li class="b-nav__item b-nav__title"><a href="">低価格のワケ</a></li>
-              <li class="b-nav__item b-nav__title"><a href="">納品までの流れ</a></li>
-              <li class="b-nav__item b-nav__title"><a href="">所属クリエイター</a></li>
-              <li class="b-nav__item b-nav__title"><a href="">よくある質問</a></li>
-            </ul>
+        <div class="l-S03">
+          <div class="l-L01">
+            <h1 class="b-logo">
+              <a href="index.html">SLashNext</a>
+            </h1>
           </div>
-        </nav>
+          <nav class="l-L02">
+            <button
+              type="button"
+              class="js-button-hamburger button-hamburger"
+              aria-controls="global-nav"
+              aria-expanded="false"
+            >
+              <div class="hamburger-text">
+                <span class="hamburger">
+                  <span class="screen-reader-text">メニューを開閉する</span>
+                </span>
+              </div>
+            </button>
+            <div id="global-nav" class="l-global-nav">
+              <ul class="m-headerNav__box">
+                <li class="b-nav__item b-nav__title"><a href="">SLashNextとは</a></li>
+                <li class="b-nav__item b-nav__title"><a href="">サービスの特徴</a></li>
+                <li class="b-nav__item b-nav__title"><a href="">価格の違い</a></li>
+                <li class="b-nav__item b-nav__title"><a href="">低価格のワケ</a></li>
+                <li class="b-nav__item b-nav__title"><a href="">納品までの流れ</a></li>
+                <li class="b-nav__item b-nav__title"><a href="">所属クリエイター</a></li>
+                <li class="b-nav__item b-nav__title"><a href="">よくある質問</a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
       </div>
     </header>
     <!-- flame common --------------------------------------------------------------------------->
