hero PCレイアウト作成

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/index.js" defer></script>
     <!----------------------------------------------------------------------------->
     <!-- ガイドライン表示表スタイル（サーバーへのアップロード不要） -->
-    <link rel="stylesheet" href="css/guide.css" />
+    <!-- <link rel="stylesheet" href="css/guide.css" /> -->
   </head>
   <body>
     <div class="container guide">
@@ -56,11 +56,20 @@
       <main class="contents">
         <div class="l-S01 s-hero">
           <div class="l-S02">
-            <div class="l-S03">
-              <div class="l-L01">
-                <div class="l-L02"></div>
-                <div class="l-L03"></div>
+            <div class="l-L01">
+              <div class="l-L02">
+                <p class="b-hero__mainCopy"><span class="br">あなたの課題に</span>適材適所のクリエイターを。</p>
+                <p class="b-hero__subCopy">高品質で低価格なWebサイト制作サービス</p>
               </div>
+            </div>
+
+            <div class="l-L03">
+              <img class="b-hero__parts01" src="img/hero_01.svg" alt="" />
+              <img class="b-hero__parts02" src="img/hero_02.svg" alt="" />
+              <img class="b-hero__parts03" src="img/hero_03.svg" alt="" />
+              <img class="b-hero__parts04" src="img/hero_04.svg" alt="" />
+              <img class="b-hero__parts05" src="img/hero_05.svg" alt="" />
+              <img class="b-hero__parts06" src="img/hero_06.svg" alt="" />
             </div>
           </div>
         </div>
