--- a/index.html
+++ b/index.html
@@ -619,12 +619,16 @@
                     </dd>
                     <dt class="b-footerCompany__label">代表者</dt>
                     <dd class="b-footerCompany__text">
-                      <span class="b-footerCompany__subText">代表取締役 社長</span>
-                      <br />
-                      芦沢 哲也 <br />
-                      <span class="b-footerCompany__subText">代表取締役 副社長</span>
-                      <br />
-                      荻野 裕行
+                      <div class="ashizawa">
+                        <span class="b-footerCompany__subText">代表取締役 社長</span>
+                        <br />
+                        芦沢 哲也 <br />
+                      </div>
+                      <div class="ogino">
+                        <span class="b-footerCompany__subText">代表取締役 副社長</span>
+                        <br />
+                        荻野 裕行
+                      </div>
                     </dd>
                     <dt class="b-footerCompany__label">ホームページ</dt>
                     <dd class="b-footerCompany__text"><a href="https://cranks.co.jp/">https://cranks.co.jp/</a></dd>
