--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/guide.css" />
   </head>
   <body>
-    <div class="container guide">
+    <div class="container">
       <header class="header"></header>
 
       <main class="contents">
