--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
     <!-- <link rel="stylesheet" href="css/guide.css" /> -->
   </head>
   <body>
-<<<<<<< HEAD
-    <div class="container">
-      <header class="header"></header>
-=======
     <div class="container guide">
       <header class="header">
         <div class="l-S01">
@@ -56,7 +52,6 @@
           </div>
         </div>
       </header>
->>>>>>> master
 
       <main class="contents">
         <div class="l-S01 s-hero">
@@ -228,9 +223,38 @@
                     </h3>
                   </div>
                   <div class="l-L09">
-                    <div class="kari-1 b-boxFlame__line b-boxFlame__line--yellow"></div>
-                    <div class="kari-2 b-boxFlame__line b-boxFlame__line--yellow"></div>
-                    <div class="kari-3 b-boxFlame__line b-boxFlame__line--yellow"></div>
+                    <div class="b-serviceContents__advantage b-boxFlame__line b-boxFlame__line--orange">
+                      <h4 class="b-serviceContents__boxTitle">多彩な経歴</h4>
+                      <figure class="b-serviceContents__boxIcon">
+                        <img class="b-image" src="img/service_advantage_01.png" width="110px" height="110px" alt="" />
+                      </figure>
+                      <ul class="b-serviceContents__advantageWrapper">
+                        <li class="b-serviceContents__boxList icon">カメラマン</li>
+                        <li class="b-serviceContents__boxList icon">イラストレーター</li>
+                        <li class="b-serviceContents__boxList icon">
+                          システムエンジニア <span class="b-serviceContents__boxList">など</span>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="b-serviceContents__advantage b-boxFlame__line b-boxFlame__line--orange">
+                      <h4 class="b-serviceContents__boxTitle">それぞれの得意</h4>
+                      <figure class="b-serviceContents__boxIcon">
+                        <img class="b-image" src="img/service_advantage_02.png" width="110px" height="110px" alt="" />
+                      </figure>
+                      <ul class="b-serviceContents__advantageWrapper">
+                        <li class="b-serviceContents__boxList icon">ネットショップが得意</li>
+                        <li class="b-serviceContents__boxList icon">堅実的なイメージが得意</li>
+                        <li class="b-serviceContents__boxList icon">
+                          イラストを使ったデザインが得意 <span class="b-serviceContents__boxList">など</span>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="b-serviceContents__advantageResult b-boxFlame__line b-boxFlame__line--orange">
+                      <p class="b-serviceContents__boxResult">クライアントに最適なWebサイトを提供</p>
+                      <figure class="b-serviceContents__boxIcon">
+                        <img class="b-image" src="img/service_advantage_03.png" width="110px" height="110px" alt="" />
+                      </figure>
+                    </div>
                   </div>
                 </div>
                 <div class="l-L10">
@@ -240,7 +264,22 @@
                       「わからない」をゼロに
                     </h3>
                   </div>
-                  <div class="l-L12"><div class="kari-4 b-boxFlame__line b-boxFlame__line--yellow"></div></div>
+                  <div class="l-L12">
+                    <div class="b-serviceContents__support b-boxFlame__line b-boxFlame__line--orange">
+                      <div class="b-serviceContents__supportWrapper">
+                        <h4 class="b-serviceContents__boxTitle">丁寧で安心できるサポート</h4>
+                        <figure class="b-serviceContents__boxIcon">
+                          <img class="b-image" src="img/service_support_01.png" width="288px" height="110px" alt="" />
+                        </figure>
+                        <p class="b-serviceContents__boxText">
+                          誠実さや親切さといった“人の本質的な部分”を最も大切にしており、これまで多くのクライアント様からも「とても丁寧に分かりやすく教えてくださり助かりました」といったお言葉をいただいております。
+                        </p>
+                      </div>
+                      <figure class="b-serviceContents__boxIcon">
+                        <img class="b-image" src="img/service_support_02.png" width="536px" height="330px" alt="" />
+                      </figure>
+                    </div>
+                  </div>
                 </div>
                 <div class="l-L13">
                   <div class="l-L14">
@@ -249,8 +288,34 @@
                     </h3>
                   </div>
                   <div class="l-L15">
-                    <div class="kari-5 b-boxFlame__line b-boxFlame__line--yellow"></div>
-                    <div class="kari-6 b-boxFlame__line b-boxFlame__line--yellow"></div>
+                    <p class="b-contents__text">
+                      Webサイトの制作において最もコストのかかるものは人件費です。既に構築されているクリエイターとの信頼関係を元に、安定的な人材の確保や円滑なコミュニケーションなど効率的に人を活かす仕組みを作り上げ、価格を最大限抑えました。
+                    </p>
+                  </div>
+                  <div class="l-L16">
+                    <div class="b-serviceContents__lowPrice b-boxFlame__line b-boxFlame__line--orange">
+                      <h4 class="b-serviceContents__boxTitle">最適な人材配置</h4>
+                      <div class="b-serviceContents__lowPriceWrapper">
+                        <figure class="b-serviceContents__boxIcon">
+                          <img class="b-image" src="img/service_lowprice_01.png" width="240px" height="188px" alt="" />
+                        </figure>
+                        <figure class="b-serviceContents__boxIcon">
+                          <img class="b-image" src="img/service_lowprice_02.png" width="194px" height="194px" alt="" />
+                        </figure>
+                      </div>
+                      <p class="b-serviceContents__boxText">
+                        クリエイターの様々な強みやスキルを的確に把握し、ご依頼内容に合わせて選定しています。
+                      </p>
+                    </div>
+                    <div class="b-serviceContents__lowPrice b-boxFlame__line b-boxFlame__line--orange">
+                      <h4 class="b-serviceContents__boxTitle">円滑なコミュニケーション</h4>
+                      <figure class="b-serviceContents__boxIcon com">
+                        <img class="b-image" src="img/service_lowprice_03.png" width="448px" height="216px" alt="" />
+                      </figure>
+                      <p class="b-serviceContents__boxText">
+                        日頃からコミュニケーションを取ることにより、共通認識や制作の特徴を互いに把握できる環境が整っています。
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
