--- a/index.html
+++ b/index.html
@@ -453,11 +453,11 @@
 
             <div class="l-L04">
               <div class="l-L05">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <img class="b-image" src="img/creator_member_01.jpg" alt="" />
+                <img class="b-image" src="img/creator_member_02.jpg" alt="" />
+                <img class="b-image" src="img/creator_member_03.jpg" alt="" />
+                <img class="b-image" src="img/creator_member_04.jpg" alt="" />
+                <img class="b-image" src="img/creator_member_01.jpg" alt="" />
               </div>
             </div>
 
