member画像、about02画像差し替え 各部調整

--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                         </li>
                       </ul>
                     </div>
+
                     <div class="b-serviceContents__advantageResult b-boxFlame__line b-boxFlame__line--orange">
                       <p class="b-serviceContents__boxResult">クライアントに最適なWebサイトを提供</p>
                       <figure class="b-serviceContents__boxIcon">
@@ -337,9 +338,11 @@
                   <p class="b-difference__mainText flame b-boxFlame__lineCircle b-boxFlame__lineCircle--blue">
                     <span class="br">トップ</span>ページ
                   </p>
+                  <p class="b-difference__plusText">+</p>
                   <p class="b-difference__mainText flame b-boxFlame__lineCircle b-boxFlame__lineCircle--blue">
                     <span class="br">下層</span>4ページ
                   </p>
+                  <p class="b-difference__plusText">+</p>
                   <p class="b-difference__mainText flame b-boxFlame__lineCircle b-boxFlame__lineCircle--blue">
                     <span class="br">スマホ</span>対応
                   </p>
