about クリエーター画像サイズ調整

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="b-aboutContents__box">
                   <p class="b-aboutContents__boxLabel">強みを持ったクリエイター</p>
                   <img
-                    class="b-aboutContents__boxIcon b-image"
+                    class="b-aboutContents__boxIcon small b-image"
                     src="img/about_contents_03.png"
                     width="175px"
                     height="175px"
