about02画像差し替え 各部さいず調整

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         </li>
                       </ul>
                     </div>
-
+                    <img src="img/hero_04.svg" alt="" />
                     <div class="b-serviceContents__advantageResult b-boxFlame__line b-boxFlame__line--orange">
                       <p class="b-serviceContents__boxResult">クライアントに最適なWebサイトを提供</p>
                       <figure class="b-serviceContents__boxIcon">
@@ -406,7 +406,7 @@
                 <div class="b-guidance b-guidance--reason">
                   <p class="b-guidance__number flame flame--blue">03</p>
                   <img
-                    class="b-guidance__icon b-image"
+                    class="b-guidance__icon small b-image"
                     src="img/reason_guidance_02.png"
                     width="180px"
                     height="180px"
