--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
         </section>
       </main>
 
-      <footer class="footer">
+      <footer class="footer sitefooter">
         <div class="l-S01">
           <div class="l-S02">
             <div class="l-S03">
