creatorのボックスの中身作成 背景アイコン設置

--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
                         </li>
                       </ul>
                     </div>
-                    <img src="img/hero_04.svg" alt="" />
+                    <div class="b-serviceContents__advantageIcon">
+                      <img class="b-image" src="img/hero_04.svg" alt="" />
+                    </div>
                     <div class="b-serviceContents__advantageResult b-boxFlame__line b-boxFlame__line--orange">
                       <p class="b-serviceContents__boxResult">クライアントに最適なWebサイトを提供</p>
                       <figure class="b-serviceContents__boxIcon">
@@ -310,7 +312,7 @@
                     </div>
                     <div class="b-serviceContents__lowPrice b-boxFlame__line b-boxFlame__line--orange">
                       <h4 class="b-serviceContents__boxTitle">円滑なコミュニケーション</h4>
-                      <figure class="b-serviceContents__boxIcon com">
+                      <figure class="b-serviceContents__boxIcon communication">
                         <img class="b-image" src="img/service_lowprice_03.png" width="448px" height="216px" alt="" />
                       </figure>
                       <p class="b-serviceContents__boxText">
@@ -582,42 +584,61 @@
               <div class="l-L06">
                 <div class="l-L07">
                   <div class="l-L08">
-                    <h3 class="b-contents__title b-contents__titlet--white">
+                    <h3 class="b-contents__title">
                       <span class="br">フリーランスWebクリエイター</span>育成スクール - SLash -
                     </h3>
                   </div>
                   <div class="l-L09 m-creatorSlash">
                     <div class="l-L10">
                       <div class="l-L11">
-                        <p class="b-heading__text b-heading__text--white">
+                        <p class="b-heading__text">
                           自らの思考や行動によって新しい価値を創造し、自主的かつ継続的な経済活動を行えるクリエイターを育成します。
                         </p>
                       </div>
                       <div class="l-L12">
-                        <p class="b-contents__text b-contents__text--white">
+                        <p class="b-contents__text">
                           SLashでは、単なる技術教育にとどまらず、人としての本質的な思考力や価値観の改善・育成を行うことを主題としています。「どんなスキルを身につけるか」ではなく「どんな人がスキルを身につけるか」に真意を見出し、社会から求められる優秀な人材教育をする中で技術教育も行います。
                         </p>
                       </div>
                       <div class="l-L13">
-                        <a class="b-creatorContents__link">フリーランスWebクリエイター育成スクール - SLash -</a>
+                        <a class="b-creatorContents__link" href="https://slash-school.com/"
+                          >フリーランスWebクリエイター育成スクール - SLash -</a
+                        >
                       </div>
                     </div>
-                    <div class="l-L14 b-boxFlame__shift b-boxFlame__shift--pink"></div>
+                    <div class="l-L14 b-creatorSLash b-boxFlame__shift b-boxFlame__shift--pink">
+                      <img class="b-creatorSLash__boxLogo b-image" src="img/creator_slash_01.png" alt="SLash" />
+                      <div class="b-creatorSLash__cardBox">
+                        <div class="b-creatorSLash__cardItem blue">
+                          <h4 class="b-creatorSLash__boxTitle blue"><span>ミッション</span></h4>
+                          <p class="b-creatorSLash__boxText">
+                            <span class="br">自らの思考や行動によって</span><span class="br">新しい価値を想像し</span
+                            ><span class="br">自主的かつ継続的な経済活動を</span> 行えるクリエイターを育成する
+                          </p>
+                        </div>
+                        <div class="b-creatorSLash__cardItem gray">
+                          <h4 class="b-creatorSLash__boxTitle gray"><span>理念</span></h4>
+                          <p class="b-creatorSLash__boxText">
+                            「知識」よりも「思考」を<br />「技術」よりも「経験」を<br />「やり方」よりも「あり方」を
+                          </p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="l-L07">
                   <div class="l-L08">
-                    <h3 class="b-contents__title b-contents__titlet--white">株式会社CRANKS</h3>
+                    <h3 class="b-contents__title" href="https://cranks.co.jp/">株式会社CRANKS</h3>
                   </div>
                   <div class="l-L09 m-creatorCranks">
                     <div class="l-L10">
                       <div class="l-L11">
-                        <p class="b-heading__text b-heading__text--white">
+                        <p class="b-heading__text">
                           株式会社CRANKSは、Webを中心に世の中に溢れる課題解決に挑むクリエイティブカンパニーです。
                         </p>
                       </div>
                       <div class="l-L12">
-                        <p class="b-contents__text b-contents__text--white">
+                        <p class="b-contents__text">
                           Webサイト制作における企画提案、丁寧なヒアリング、クオリティの高いデザイン、コーディング、保守運用までトータルで行える2名の現役クリエイターが代表を務めます。
                         </p>
                       </div>
@@ -625,7 +646,32 @@
                         <a class="b-creatorContents__link">株式会社CRANKS</a>
                       </div>
                     </div>
-                    <div class="l-L14 b-boxFlame__shift b-boxFlame__shift--purple"></div>
+                    <div class="l-L14 b-creatorCranks b-boxFlame__shift b-boxFlame__shift--purple">
+                      <img class="b-creatorCranks__boxLogo b-image" src="img/creator_cranks_01.png" alt="Cranks" />
+                      <div class="b-creatorCranks__cardBox">
+                        <div class="b-creatorCranks__cardItem">
+                          <img class="b-creatorCranks__boxImage b-image" src="img/creator_cranks_02.png" alt="" />
+                          <dl class="b-creatorCranks__box">
+                            <dt class="b-creatorCranks__boxName--jp">
+                              芦沢 哲也<br /><span class="b-creatorCranks__boxName--en">Ashizawa Tetsuya</span>
+                            </dt>
+                            <dd class="b-creatorCranks__boxStatus">代表取締役社長</dd>
+                            <dd class="b-creatorCranks__boxJob">Webクリエイター/プログラマー</dd>
+                          </dl>
+                        </div>
+                        <div class="b-creatorCranks__cardItem">
+                          <img class="b-creatorCranks__boxImage b-image" src="img/creator_cranks_03.png" alt="" />
+                          <dl class="b-creatorCranks__box">
+                            <dt class="b-creatorCranks__boxName--jp">
+                              荻野裕行<br />
+                              <span class="b-creatorCranks__boxName--en">Ogino Hiroyuki</span>
+                            </dt>
+                            <dd class="b-creatorCranks__boxStatus">代表取締役副社長</dd>
+                            <dd class="b-creatorCranks__boxJob">Webクリエイター/UIデザイナー</dd>
+                          </dl>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
