--- a/parts.html
+++ b/parts.html
@@ -218,9 +218,10 @@
     <p class="b-creatorSLash__boxText">
       「知識」よりも「思考」を<br />「技術」よりも「経験」を<br />「やり方」よりも「あり方」を
     </p>
-    <dl class="b-creatorCranks__box">
-      <dt class="b-creatorCranks__boxName--jp">芦沢 哲也</dt>
-      <dd class="b-creatorCranks__boxName--en">Ashizawa Tetsuya</dd>
+    <dl class="b-creatorContents__box">
+      <dt class="b-creatorContents__boxName--jp">
+        芦沢 哲也<br /><span class="b-creatorCranks__boxName--en">Ashizawa Tetsuya</span>
+      </dt>
       <dd class="b-creatorCranks__boxStatus">代表取締役社長</dd>
       <dd class="b-creatorCranks__boxJob">webクリエイター/プログラマー</dd>
     </dl>
