--- a/parts__text.html
+++ b/parts__text.html
@@ -129,8 +129,10 @@
       「知識」よりも「思考」を<br />「技術」よりも「経験」を<br />「やり方」よりも「あり方」を
     </p>
     <dl class="b-creatorContents__box">
-      <dt class="b-creatorContents__boxName--jp">芦沢 哲也</dt>
-      <dd class="b-creatorContents__boxName--en">Ashizawa Tetsuya</dd>
+      <dt class="b-creatorContents__boxName--jp">
+        芦沢 哲也<br />
+        <span class="b-creatorContents__boxName--en">Ashizawa Tetsuya</span>
+      </dt>
       <dd class="b-creatorContents__boxStatus">代表取締役社長</dd>
       <dd class="b-creatorContents__boxJob">webクリエイター/プログラマー</dd>
     </dl>
