背景アイコン、タイトルアイコン追加

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="l-S03">
               <div class="l-L01">
                 <div class="l-L02">
-                  <h2 class="b-heading__title icon icon--pink"><span class="emphasis">SLashNext</span>とは</h2>
+                  <h2 class="b-heading__title"><span class="emphasis icon icon--pink">SLashNext</span>とは</h2>
                 </div>
                 <div class="l-L03">
                   <p class="b-heading__text">
@@ -156,7 +156,7 @@
             <div class="l-S03">
               <div class="l-L01">
                 <div class="l-L02">
-                  <h2 class="b-heading__title icon icon--orange">サービスの<span class="emphasis">特徴</span></h2>
+                  <h2 class="b-heading__title">サービスの<span class="emphasis icon icon--orange">特徴</span></h2>
                 </div>
                 <div class="l-L03">
                   <p class="b-heading__text">様々な課題に対し、最適なクリエイターが制作を行います。</p>
@@ -368,9 +368,7 @@
             <div class="l-S03">
               <div class="l-L01">
                 <div class="l-L02">
-                  <h2 class="b-heading__title icon icon--orange">
-                    <span class="emphasis">低価格</span>が実現できるワケ
-                  </h2>
+                  <h2 class="b-heading__title"><span class="emphasis icon icon--blue">低価格</span>が実現できるワケ</h2>
                 </div>
                 <div class="l-L03">
                   <p class="b-heading__text">SLashNextだからこそ様々なコスト削減が可能です。</p>
@@ -499,7 +497,7 @@
             <div class="l-S03">
               <div class="l-L01">
                 <div class="l-L02">
-                  <h2 class="b-heading__title icon icon--orange">納品までの<span class="emphasis">流れ</span></h2>
+                  <h2 class="b-heading__title">納品までの<span class="emphasis icon icon--green">流れ</span></h2>
                 </div>
                 <div class="l-L03">
                   <p class="b-heading__text">ご依頼いただいてから納品までの流れは通常のWeb制作と変わりありません。</p>
@@ -553,8 +551,8 @@
             <div class="l-S03">
               <div class="l-L01">
                 <div class="l-L02">
-                  <h2 class="b-heading__title icon icon--purpul">
-                    <span class="emphasis">所属クリエイター</span>について
+                  <h2 class="b-heading__title">
+                    <span class="emphasis icon icon--purple">所属クリエイター</span>について
                   </h2>
                 </div>
                 <div class="l-L03">
@@ -684,7 +682,7 @@
             <div class="l-S03">
               <div class="l-L01">
                 <div class="l-L02">
-                  <h2 class="b-heading__title icon icon--yellow">よくある<span class="emphasis">質問</span></h2>
+                  <h2 class="b-heading__title">よくある<span class="emphasis icon icon--yellow">質問</span></h2>
                 </div>
                 <ul class="l-L03">
                   <li class="b-boxFlame__line b-boxFlame__line--yellow">
