--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">03</p>
                   <img
-                    class="b-guidance__icon b-image"
+                    class="b-guidance__icon large b-image"
                     src="img/service_guidance_03.png"
                     width="150px"
                     height="150px"
