--- a/index.html
+++ b/index.html
@@ -599,7 +599,11 @@
                         </p>
                       </div>
                       <div class="l-L13">
-                        <a class="b-creatorContents__link" href="https://slash-school.com/"
+                        <a
+                          class="b-creatorContents__link"
+                          href="https://slash-school.com/"
+                          target="_blank"
+                          rel="noopener noreferrer"
                           >フリーランスWebクリエイター育成スクール - SLash -</a
                         >
                       </div>
@@ -626,7 +630,7 @@
                 </div>
                 <div class="l-L07">
                   <div class="l-L08">
-                    <h3 class="b-contents__title" href="https://cranks.co.jp/">株式会社CRANKS</h3>
+                    <h3 class="b-contents__title">株式会社CRANKS</h3>
                   </div>
                   <div class="l-L09 m-creatorCranks">
                     <div class="l-L10">
@@ -641,7 +645,13 @@
                         </p>
                       </div>
                       <div class="l-L13">
-                        <a class="b-creatorContents__link">株式会社CRANKS</a>
+                        <a
+                          class="b-creatorContents__link"
+                          href="https://cranks.co.jp/"
+                          target="_blank"
+                          rel="noopener noreferrer"
+                          >株式会社CRANKS</a
+                        >
                       </div>
                     </div>
                     <div class="l-L14 b-creatorCranks b-boxFlame__shift b-boxFlame__shift--purple">
@@ -792,7 +802,11 @@
                       </div>
                     </dd>
                     <dt class="b-footerCompany__label">ホームページ</dt>
-                    <dd class="b-footerCompany__text"><a href="https://cranks.co.jp/">https://cranks.co.jp/</a></dd>
+                    <dd class="b-footerCompany__text">
+                      <a href="https://cranks.co.jp/" target="_blank" rel="noopener noreferrer"
+                        >https://cranks.co.jp/</a
+                      >
+                    </dd>
                   </dl>
                 </div>
               </div>
