ページ内リンク設置

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
               </button>
               <div id="global-nav" class="l-global-nav">
                 <ul class="m-headerNav__box">
-                  <li class="b-nav__item b-nav__title"><a href="">SLashNextとは</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">サービスの特徴</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">価格の違い</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">低価格のワケ</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">納品までの流れ</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">所属クリエイター</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">よくある質問</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-about">SLashNextとは</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-service">サービスの特徴</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-difference">価格の違い</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-season">低価格のワケ</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-flow">納品までの流れ</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-creator">所属クリエイター</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-faq">よくある質問</a></li>
                 </ul>
               </div>
             </nav>
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <section class="l-S01 s-about">
+        <section id="s-about" class="l-S01 s-about">
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01">
@@ -151,7 +151,7 @@
           </div>
         </section>
 
-        <section class="l-S01 s-service">
+        <section id="s-service" class="l-S01 s-service">
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01">
@@ -326,7 +326,7 @@
           </div>
         </section>
 
-        <section class="l-S01 s-difference">
+        <section id="s-difference" class="l-S01 s-difference">
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01"><h2 class="b-difference__mainTitle">他社との価格の違い</h2></div>
@@ -363,7 +363,7 @@
           </div>
         </section>
 
-        <section class="l-S01 s-reason">
+        <section id="s-season" class="l-S01 s-reason">
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01">
@@ -492,7 +492,7 @@
           </div>
         </section>
 
-        <section class="l-S01 s-flow">
+        <section id="s-flow" class="l-S01 s-flow">
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01">
@@ -546,7 +546,7 @@
           </div>
         </section>
 
-        <section class="l-S01 s-creator">
+        <section id="s-creator" class="l-S01 s-creator">
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01">
@@ -687,7 +687,7 @@
           </div>
         </section>
 
-        <section class="l-S01 s-faq">
+        <section id="s-faq" class="l-S01 s-faq">
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01">
@@ -819,13 +819,13 @@
               </div>
               <nav class="l-L06">
                 <ul class="m-footerNav__box">
-                  <li class="b-nav__item b-nav__title"><a href="">SLashNextとは</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">サービスの特徴</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">価格の違い</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">低価格のワケ</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">納品までの流れ</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">所属クリエイター</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="">よくある質問</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-about">SLashNextとは</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-service">サービスの特徴</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-difference">価格の違い</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-season">低価格のワケ</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-flow">納品までの流れ</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-creator">所属クリエイター</a></li>
+                  <li class="b-nav__item b-nav__title"><a href="#s-faq">よくある質問</a></li>
                 </ul>
               </nav>
             </div>
